refactored artworks css again because of grid layout bugs on firefox and safari

--- a/client/src/components/Artworks/artworks.scss
+++ b/client/src/components/Artworks/artworks.scss
@@ -16,9 +16,13 @@
       height: 400px;
       position: relative;
       @media only screen and (min-width: 840px) {
-        width: 100%;
-        height: 100%;
-        display: grid;
+        width: auto;
+        height: auto;
+        &::before {
+          content: '';
+          display: block;
+          padding-bottom: 100%;
+        }
       }
       .image__gradient__overlay {
         position: absolute;
@@ -61,16 +65,15 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        @media only screen and (min-width: 640px) {
-          grid-area: 1 / 1 / 2 / 2;
+        @media only screen and (min-width: 840px) {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: 0;
+          left: 0;
+          margin: auto;
+          z-index: -1;
         }
-      }
-    }
-    .image__container::before {
-      @media only screen and (min-width: 640px) {
-        content: '';
-        padding-bottom: 100%;
-        grid-area: 1 / 1 / 2 / 2;
       }
     }
   }
